@@ -1,3 +1,11 @@
+2009-08-20  Bartosz Kosiorek  <gang65@poczta.onet.pl>
+
+	Fix bug with wrong panel size value (http://www.openchrome.org/trac/ticket/301)
+        This bug appeared only when UseLegacyModeSwitch was TRUE
+
+	* src/via_driver.c: (VIASetupDefaultOptions):
+	* src/via_video.c: (DecideOverlaySupport):
+
 2009-08-17  Bartosz Kosiorek <gang65@poczta.onet.pl>
 
 	Added support of the VIA OpenBook
